[tool.poetry]
name = "pyside6-project"
version = "0.1.0"
description = "\"a Pyside6 project\""
authors = ["clinton"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
qt-material = "^2.14"
PySide6 = "^6.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
